fix overflow on mobile

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -21,6 +21,10 @@ html {
   hyphens: auto;
 }
 
+body {
+  @apply overflow-hidden;
+}
+
 @responsive {
   .row {
     @apply -mx-3 w-row flex flex-row flex-wrap;
